--- a/src/Pages/SellPage/HouseOffer.scss
+++ b/src/Pages/SellPage/HouseOffer.scss
@@ -1,4 +1,4 @@
-.sell__info__left {
+.house__offer__left {
   background: linear-gradient(
     164deg,
     rgba(249, 92, 187, 1) 0%,
@@ -23,12 +23,24 @@
   }
 }
 
-.sell__info__right {
+.house__offer__content {
+  margin-top: 40px;
+  font-size: 20px;
+
+  span {
+    font-size: 20px;
+    font-weight: 600;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
+.house__offer__right {
   text-align: left;
   margin-top: 50px;
   margin-left: 20px;
 
-  .sell__right__title {
+  .house__offer__title {
     border-left: 6px solid #2c4dff;
     border-radius: 2px;
     padding-left: 6px;
@@ -37,32 +49,7 @@
     font-size: 24px;
   }
 
-  .form-group {
-    padding: 10px;
-    width: 333px;
-    height: 64px;
-    border: 2px solid;
-    margin: 10px;
-    outline: none;
-    border-radius: 16px;
-    margin-bottom: 50px;
-  }
-  .form-group > label {
-    padding-left: 5px;
-    padding-right: 5px;
-    position: relative;
-    top: -24px;
-    left: 20px;
-    background-color: white;
-  }
-
-  .form-group > input {
-    border: none;
-    width: 100%;
-    outline: none;
-  }
-
-  .sell__btn {
+  .house__btn {
     width: 158px;
     height: 57px;
     border-radius: 15px;
