--- a/src/Pages/SellPage/SellPage.scss
+++ b/src/Pages/SellPage/SellPage.scss
@@ -43,4 +43,10 @@
     color: #fff;
     text-decoration: none;
   }
+
+  @media only screen and (max-width: 800px) {
+    .sell__btn {
+      width: 100%;
+    }
+  }
 }
