--- a/src/Pages/BuyPage/BuyPage.scss
+++ b/src/Pages/BuyPage/BuyPage.scss
@@ -13,12 +13,20 @@
     text-decoration: none;
     color: black;
   }
+  @media only screen and (max-width: 1494px) {
+    margin: 0px;
+  }
 }
 
 img {
   width: 474px;
   height: 545px;
   border-radius: 8px;
+
+  @media only screen and (max-width: 1494px) {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .buy__content {
@@ -37,6 +45,10 @@ img {
     font-size: 20px;
 
     font-weight: 300;
+  }
+  @media only screen and (max-width: 1494px) {
+    text-align: left;
+    margin-left: 0;
   }
 }
 
@@ -68,6 +80,10 @@ img {
   .buy__icon {
     width: 40px;
     height: 21px;
+  }
+
+  @media only screen and (max-width: 1500px) {
+    text-align: left;
   }
 }
 
