Added Responsiveness To The Remaining Pages

--- a/src/Compnents/Footer/Footer.scss
+++ b/src/Compnents/Footer/Footer.scss
@@ -101,4 +101,11 @@
       border-bottom: 1px solid black;
     }
   }
+
+  .footer__email {
+    button {
+      margin-left: 0px;
+      margin-top: 20px;
+    }
+  }
 }
