--- a/src/Compnents/NavBar/NavBar.scss
+++ b/src/Compnents/NavBar/NavBar.scss
@@ -71,4 +71,12 @@
       color: black;
     }
   }
+
+  .nav__container {
+    .nav__left {
+      input {
+        width: 200px;
+      }
+    }
+  }
 }
