--- a/src/Pages/BuyPage/BuyPage.scss
+++ b/src/Pages/BuyPage/BuyPage.scss
@@ -129,6 +129,23 @@ img {
       margin-left: 10px;
       margin-top: 5px;
     }
+    @media only screen and (max-width: 1702px) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+
+  @media only screen and (max-width: 900px) {
+    flex-direction: column;
+
+    .buy__collapse__info {
+      margin-left: 0px;
+      margin-top: 20px;
+    }
+    .buy__collapse__price {
+      margin-left: 0px;
+      margin-top: 20px;
+    }
   }
 }
 
