--- a/src/Pages/RoomRentPage/RoomRentInfo.scss
+++ b/src/Pages/RoomRentPage/RoomRentInfo.scss
@@ -75,6 +75,35 @@
     div {
       padding-left: 15px;
     }
+    @media only screen and (max-width: 1700px) {
+      margin-left: 120px;
+    }
+    @media only screen and (max-width: 1650px) {
+      margin-left: 100px;
+    }
+    @media only screen and (max-width: 1530px) {
+      margin-left: 80px;
+    }
+    @media only screen and (max-width: 1430px) {
+      margin-left: 50px;
+    }
+    @media only screen and (max-width: 1350px) {
+      margin-left: 30px;
+    }
+    @media only screen and (max-width: 1160px) {
+      margin-left: 5px;
+    }
+    @media only screen and (max-width: 800px) {
+      margin-left: 0px;
+      margin-top: 5px;
+      div {
+        padding-left: 5px;
+      }
+    }
+  }
+
+  @media only screen and (max-width: 1064px) {
+    flex-direction: column;
   }
 }
 
