--- a/src/Pages/RentPage/RentPage.scss
+++ b/src/Pages/RentPage/RentPage.scss
@@ -1,7 +1,7 @@
 .rent__container {
   display: flex;
   margin-top: 20px;
-  justify-content: space-between;
+  justify-content: flex-start;
   height: 100%;
   border-radius: 10px;
   background-color: white;
@@ -26,7 +26,6 @@
   }
 
   .rent__price {
-    margin-left: 475px;
     display: flex;
 
     h1 {
