--- a/src/Compnents/NavBar/NavBar.scss
+++ b/src/Compnents/NavBar/NavBar.scss
@@ -169,4 +169,62 @@
       }
     }
   }
+
+  .nav__user__button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    button {
+      margin: 10px;
+      border: 0.5px solid #606060 !important;
+      border-radius: 7px !important;
+    }
+  }
+
+  .nav__user__options {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    input {
+      margin-top: 4px;
+      margin-bottom: 10px;
+      background-clip: padding-box;
+      background-color: #fff;
+      border: 1px solid #ced4da;
+      border-radius: 0.25rem;
+      color: #495057;
+      display: block;
+      font-size: 1rem;
+      font-weight: 400;
+      height: calc(1.5em + 0.75rem + 2px);
+      line-height: 1.5;
+      padding: 0.375rem 0.75rem;
+      padding-top: 0.2rem;
+      padding-bottom: 0.4rem;
+      transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+      width: 100%;
+    }
+
+    button {
+      margin-top: 10px;
+      background-color: black;
+      border: 1px solid transparent;
+      border-radius: 0.25rem;
+      color: white;
+      display: inline-block;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      padding: 0.375rem 0.75rem;
+      text-align: center;
+      transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      vertical-align: middle;
+    }
+  }
 }
