--- a/src/Compnents/NavBar/NavBar.scss
+++ b/src/Compnents/NavBar/NavBar.scss
@@ -229,6 +229,18 @@
   }
 }
 
+.navbar__profile {
+  width: 42px;
+  height: 40px;
+  cursor: pointer;
+  border-radius: 30px;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 // Mobile Responsiveness
 @media only screen and (max-width: 768px) {
   .nav__brand {
