feat : 🔨 Added The Functionality To Reset Password

--- a/src/Pages/LoginPage/Login.scss
+++ b/src/Pages/LoginPage/Login.scss
@@ -48,6 +48,7 @@
       color: #48a3ff;
       font-size: 15px;
       margin-left: 5px;
+      cursor: pointer;
 
       @media screen and (max-width: 1480px) {
         margin-left: -70px;
