--- a/src/Compnents/NavBar/NavBar.scss
+++ b/src/Compnents/NavBar/NavBar.scss
@@ -16,8 +16,13 @@
   }
 
   h1 {
+    color: black;
     font-size: 32px;
     font-family: "Inter", sans-serif;
+  }
+
+  a {
+    text-decoration: none;
   }
 }
 
