--- a/src/Compnents/NavBar/NavBar.scss
+++ b/src/Compnents/NavBar/NavBar.scss
@@ -51,7 +51,7 @@
     }
 
     .active {
-      border-bottom: 3px solid #1e5093;
+      border-bottom: 2px solid #1e5093;
       padding-bottom: 5px;
       transform: scaleX(1);
       transition: transform 250ms ease-in-out;
@@ -239,6 +239,7 @@
   height: 40px;
   cursor: pointer;
   border-radius: 30px;
+  margin-left: 20px;
 
   img {
     width: 100%;
@@ -266,5 +267,9 @@
   .nav__container {
     margin-top: -50px;
     flex-direction: row-reverse;
+  }
+
+  .navbar__profile {
+    margin: 0;
   }
 }
