--- a/src/Pages/BuyPage/BuyPage.scss
+++ b/src/Pages/BuyPage/BuyPage.scss
@@ -170,14 +170,9 @@ img {
   display: flex;
   flex-direction: column;
   margin-left: 15px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 20px;
-  border-radius: 10px;
-  width: 21rem;
-  position: absolute;
+
   background: white;
-  left: 9%;
-  margin-top: 60px;
 
   .buy__filter__title {
     h1 {
@@ -205,7 +200,7 @@ img {
     .react-datepicker__input-container {
       input {
         background-color: #f4f2f2;
-        width: 19rem;
+        width: 86rem;
         padding: 7px;
         border-radius: 9px;
         border: none;
@@ -217,7 +212,7 @@ img {
   .buy__filter__input {
     input {
       background-color: #f4f2f2;
-      width: 19rem;
+      width: 86rem;
       padding: 7px;
       border-radius: 9px;
       border: none;
@@ -235,10 +230,14 @@ img {
     margin-top: 40px;
     margin-left: -10px;
     Button {
-      width: 100%;
+      width: 97%;
       border-radius: 9px;
     }
   }
+}
+
+.mantine-121w2fi {
+  display: none;
 }
 
 // Mobile Responsiveness
